# GetGrub

./: .gitignore  App Icon.tiff  README.md  Untitled.tiff  micahTest.md  parse.js  stuff.js  test.html
GetGrub/: clip  stuff.js
GetGrub/pages 01/: filerequest.html  messengerTemplate.html
Images/iOS/AppIcon.appiconset/: Contents.json
pages 01/: filerequest.html  filerequest.js  frontpage.html  frontpage.js  messages.html  messages.js  requestpage.html  requestpage.js  signup.html  signup.js  talkToParse.js
web/: Main.hs  default.nix  web.cabal
web/static/: home.html  messages.html  messenger.html  request.html  requests.html  signup.html
web/static/html/: frontpage.html  messages.html  signup.html
web/static/js/: requestpage.js
web/static/scripts/: database.js  requests.js  scrolling.js
