name:                web
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
cabal-version:       >=1.10

executable serve
  main-is:             Main.hs
  build-depends:       base, warp, wai-app-static
  default-language:    Haskell2010
